New Depsgraph crash #44689

Closed
opened 2015-05-13 00:28:50 +02:00 by Angus Hollands · 10 comments

Windows 7 64 bit, 16gb ram, GTX460 1gb, i5 760 OC.

Buildbot build -

Blender 2.74 (sub 5), Commit date: 2015-05-12 13:48, Hash f0f4810

Win64 CMAKE (VC2013(

Running Blender with --enable-new-depsgraph crashes:

D:\Users\Angus\Downloads\win64_cmake_vc2013\Blender-2.74.0-git20150512.-AMD64>bl
ender --enable-new-depsgraph
AL lib: (EE) UpdateDeviceParams: Failed to set 44100hz, got 48000hz instead
found bundled python: D:\Users\Angus\Downloads\win64_cmake_vc2013\Blender-2.74.0
-git20150512.-AMD64\2.74\python
Error: EXCEPTION_ACCESS_VIOLATION

Not ruling out simple build error, could be bad build from buildbot.
Not verified by testing from master.

Windows 7 64 bit, 16gb ram, GTX460 1gb, i5 760 OC. Buildbot build - # Blender 2.74 (sub 5), Commit date: 2015-05-12 13:48, Hash f0f4810 Win64 CMAKE (VC2013( Running Blender with --enable-new-depsgraph crashes: ``` D:\Users\Angus\Downloads\win64_cmake_vc2013\Blender-2.74.0-git20150512.-AMD64>bl ender --enable-new-depsgraph AL lib: (EE) UpdateDeviceParams: Failed to set 44100hz, got 48000hz instead found bundled python: D:\Users\Angus\Downloads\win64_cmake_vc2013\Blender-2.74.0 -git20150512.-AMD64\2.74\python Error: EXCEPTION_ACCESS_VIOLATION ``` Not ruling out simple build error, could be bad build from buildbot. Not verified by testing from master.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Angus Hollands 2015-05-13 00:28:50 +02:00
Author

Added subscriber: @AngusHollands-4

Added subscriber: @AngusHollands-4
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

It would help if you tried to get a backtrace/stacktrace showing where the crash is coming from. You will ned a debug build for that

It would help if you tried to get a backtrace/stacktrace showing where the crash is coming from. You will ned a debug build for that

Added subscriber: @sindra1961

Added subscriber: @sindra1961

When blender ran, it did not crash, but crashed when I made curve object and made new curve object in different layer.

log file:
result.txt

blender version:
version 2.74 (sub 5), branch b'master', commit date b'2015-05-13' b'01:00', hash b'abb80ab', b'Release'

When blender ran, it did not crash, but crashed when I made curve object and made new curve object in different layer. log file: [result.txt](https://archive.blender.org/developer/F173729/result.txt) blender version: version 2.74 (sub 5), branch b'master', commit date b'2015-05-13' b'01:00', hash b'abb80ab', b'Release'

The layer does not matter.
blender crashed for EXCEPTION_ACCESS_VIOLATION when I generated plane two.

The layer does not matter. blender crashed for EXCEPTION_ACCESS_VIOLATION when I generated plane two.

This issue was referenced by ae9e38c5ad

This issue was referenced by ae9e38c5adc60347e127c9f4c5ee5436b611b48f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ae9e38c5ad.

Closed by commit ae9e38c5ad.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44689
No description provided.