Fix T44689: New Depsgraph crash

Simple highschool rated issue -- uninitialized variable :)