source/blender/depsgraph/intern/depsnode.cc
@@ -114,6 +114,10 @@ void TimeSourceDepsNode::tag_update(Depsgraph *graph)
 
 /* Root Node ============================================== */
 
+RootDepsNode::RootDepsNode() : time_source(NULL)
+{
+}
+
 RootDepsNode::~RootDepsNode()
 {
 	OBJECT_GUARDED_DELETE(time_source, TimeSourceDepsNode);
